--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,8 +10,14 @@
     "Objetivos:\n",
     "- Como carregar e armazenar documentos PDF com LangChain.\n",
     "- Criar pipelines de consulta para interagir com os documentos.\n",
-    "- Criar um bloco de perguntas e respostas (Q&A) simples.\n"
+    "- Criar um bloco de perguntas e respostas (Q&A) simples."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38e27e66",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
