--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -15,14 +15,223 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38e27e66",
+   "id": "dbbbc518",
    "metadata": {},
-   "source": []
+   "source": [
+    "Parte 1 - Entendendo os basicos de LangChain\n",
+    "Parte 2 - Carregando e armazenando documentos\n",
+    "Parte 3 - Criando um pipeline de consulta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b5d64731",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting langchain\n",
+      "  Downloading langchain-0.3.27-py3-none-any.whl.metadata (7.8 kB)\n",
+      "Collecting langchain-core<1.0.0,>=0.3.72 (from langchain)\n",
+      "  Downloading langchain_core-0.3.75-py3-none-any.whl.metadata (5.7 kB)\n",
+      "Collecting langchain-text-splitters<1.0.0,>=0.3.9 (from langchain)\n",
+      "  Downloading langchain_text_splitters-0.3.11-py3-none-any.whl.metadata (1.8 kB)\n",
+      "Collecting langsmith>=0.1.17 (from langchain)\n",
+      "  Downloading langsmith-0.4.25-py3-none-any.whl.metadata (14 kB)\n",
+      "Collecting pydantic<3.0.0,>=2.7.4 (from langchain)\n",
+      "  Downloading pydantic-2.11.7-py3-none-any.whl.metadata (67 kB)\n",
+      "Collecting SQLAlchemy<3,>=1.4 (from langchain)\n",
+      "  Downloading sqlalchemy-2.0.43-cp313-cp313-macosx_11_0_arm64.whl.metadata (9.6 kB)\n",
+      "Collecting requests<3,>=2 (from langchain)\n",
+      "  Downloading requests-2.32.5-py3-none-any.whl.metadata (4.9 kB)\n",
+      "Collecting PyYAML>=5.3 (from langchain)\n",
+      "  Downloading PyYAML-6.0.2-cp313-cp313-macosx_11_0_arm64.whl.metadata (2.1 kB)\n",
+      "Collecting tenacity!=8.4.0,<10.0.0,>=8.1.0 (from langchain-core<1.0.0,>=0.3.72->langchain)\n",
+      "  Using cached tenacity-9.1.2-py3-none-any.whl.metadata (1.2 kB)\n",
+      "Collecting jsonpatch<2.0,>=1.33 (from langchain-core<1.0.0,>=0.3.72->langchain)\n",
+      "  Downloading jsonpatch-1.33-py2.py3-none-any.whl.metadata (3.0 kB)\n",
+      "Collecting typing-extensions>=4.7 (from langchain-core<1.0.0,>=0.3.72->langchain)\n",
+      "  Downloading typing_extensions-4.15.0-py3-none-any.whl.metadata (3.3 kB)\n",
+      "Requirement already satisfied: packaging>=23.2 in ./.venv/lib/python3.13/site-packages (from langchain-core<1.0.0,>=0.3.72->langchain) (25.0)\n",
+      "Collecting jsonpointer>=1.9 (from jsonpatch<2.0,>=1.33->langchain-core<1.0.0,>=0.3.72->langchain)\n",
+      "  Using cached jsonpointer-3.0.0-py2.py3-none-any.whl.metadata (2.3 kB)\n",
+      "Collecting annotated-types>=0.6.0 (from pydantic<3.0.0,>=2.7.4->langchain)\n",
+      "  Using cached annotated_types-0.7.0-py3-none-any.whl.metadata (15 kB)\n",
+      "Collecting pydantic-core==2.33.2 (from pydantic<3.0.0,>=2.7.4->langchain)\n",
+      "  Downloading pydantic_core-2.33.2-cp313-cp313-macosx_11_0_arm64.whl.metadata (6.8 kB)\n",
+      "Collecting typing-inspection>=0.4.0 (from pydantic<3.0.0,>=2.7.4->langchain)\n",
+      "  Using cached typing_inspection-0.4.1-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Collecting charset_normalizer<4,>=2 (from requests<3,>=2->langchain)\n",
+      "  Downloading charset_normalizer-3.4.3-cp313-cp313-macosx_10_13_universal2.whl.metadata (36 kB)\n",
+      "Collecting idna<4,>=2.5 (from requests<3,>=2->langchain)\n",
+      "  Using cached idna-3.10-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting urllib3<3,>=1.21.1 (from requests<3,>=2->langchain)\n",
+      "  Downloading urllib3-2.5.0-py3-none-any.whl.metadata (6.5 kB)\n",
+      "Collecting certifi>=2017.4.17 (from requests<3,>=2->langchain)\n",
+      "  Using cached certifi-2025.8.3-py3-none-any.whl.metadata (2.4 kB)\n",
+      "Collecting httpx<1,>=0.23.0 (from langsmith>=0.1.17->langchain)\n",
+      "  Using cached httpx-0.28.1-py3-none-any.whl.metadata (7.1 kB)\n",
+      "Collecting orjson>=3.9.14 (from langsmith>=0.1.17->langchain)\n",
+      "  Downloading orjson-3.11.3-cp313-cp313-macosx_15_0_arm64.whl.metadata (41 kB)\n",
+      "Collecting requests-toolbelt>=1.0.0 (from langsmith>=0.1.17->langchain)\n",
+      "  Downloading requests_toolbelt-1.0.0-py2.py3-none-any.whl.metadata (14 kB)\n",
+      "Collecting zstandard>=0.23.0 (from langsmith>=0.1.17->langchain)\n",
+      "  Downloading zstandard-0.24.0-cp313-cp313-macosx_11_0_arm64.whl.metadata (3.1 kB)\n",
+      "Collecting anyio (from httpx<1,>=0.23.0->langsmith>=0.1.17->langchain)\n",
+      "  Using cached anyio-4.10.0-py3-none-any.whl.metadata (4.0 kB)\n",
+      "Collecting httpcore==1.* (from httpx<1,>=0.23.0->langsmith>=0.1.17->langchain)\n",
+      "  Using cached httpcore-1.0.9-py3-none-any.whl.metadata (21 kB)\n",
+      "Collecting h11>=0.16 (from httpcore==1.*->httpx<1,>=0.23.0->langsmith>=0.1.17->langchain)\n",
+      "  Using cached h11-0.16.0-py3-none-any.whl.metadata (8.3 kB)\n",
+      "Collecting sniffio>=1.1 (from anyio->httpx<1,>=0.23.0->langsmith>=0.1.17->langchain)\n",
+      "  Using cached sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
+      "Downloading langchain-0.3.27-py3-none-any.whl (1.0 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m17.0 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading langchain_core-0.3.75-py3-none-any.whl (443 kB)\n",
+      "Downloading jsonpatch-1.33-py2.py3-none-any.whl (12 kB)\n",
+      "Downloading langchain_text_splitters-0.3.11-py3-none-any.whl (33 kB)\n",
+      "Downloading pydantic-2.11.7-py3-none-any.whl (444 kB)\n",
+      "Downloading pydantic_core-2.33.2-cp313-cp313-macosx_11_0_arm64.whl (1.8 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m30.4 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading requests-2.32.5-py3-none-any.whl (64 kB)\n",
+      "Downloading charset_normalizer-3.4.3-cp313-cp313-macosx_10_13_universal2.whl (205 kB)\n",
+      "Using cached idna-3.10-py3-none-any.whl (70 kB)\n",
+      "Downloading sqlalchemy-2.0.43-cp313-cp313-macosx_11_0_arm64.whl (2.1 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m34.8 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m\n",
+      "\u001b[?25hUsing cached tenacity-9.1.2-py3-none-any.whl (28 kB)\n",
+      "Downloading urllib3-2.5.0-py3-none-any.whl (129 kB)\n",
+      "Using cached annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
+      "Using cached certifi-2025.8.3-py3-none-any.whl (161 kB)\n",
+      "Using cached jsonpointer-3.0.0-py2.py3-none-any.whl (7.6 kB)\n",
+      "Downloading langsmith-0.4.25-py3-none-any.whl (379 kB)\n",
+      "Using cached httpx-0.28.1-py3-none-any.whl (73 kB)\n",
+      "Using cached httpcore-1.0.9-py3-none-any.whl (78 kB)\n",
+      "Using cached h11-0.16.0-py3-none-any.whl (37 kB)\n",
+      "Downloading orjson-3.11.3-cp313-cp313-macosx_15_0_arm64.whl (127 kB)\n",
+      "Downloading PyYAML-6.0.2-cp313-cp313-macosx_11_0_arm64.whl (171 kB)\n",
+      "Downloading requests_toolbelt-1.0.0-py2.py3-none-any.whl (54 kB)\n",
+      "Downloading typing_extensions-4.15.0-py3-none-any.whl (44 kB)\n",
+      "Using cached typing_inspection-0.4.1-py3-none-any.whl (14 kB)\n",
+      "Downloading zstandard-0.24.0-cp313-cp313-macosx_11_0_arm64.whl (640 kB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m640.3/640.3 kB\u001b[0m \u001b[31m23.7 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m\n",
+      "\u001b[?25hUsing cached anyio-4.10.0-py3-none-any.whl (107 kB)\n",
+      "Using cached sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
+      "Installing collected packages: zstandard, urllib3, typing-extensions, tenacity, sniffio, PyYAML, orjson, jsonpointer, idna, h11, charset_normalizer, certifi, annotated-types, typing-inspection, SQLAlchemy, requests, pydantic-core, jsonpatch, httpcore, anyio, requests-toolbelt, pydantic, httpx, langsmith, langchain-core, langchain-text-splitters, langchain\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m27/27\u001b[0m [langchain];237m━\u001b[0m \u001b[32m26/27\u001b[0m [langchain]litters]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed PyYAML-6.0.2 SQLAlchemy-2.0.43 annotated-types-0.7.0 anyio-4.10.0 certifi-2025.8.3 charset_normalizer-3.4.3 h11-0.16.0 httpcore-1.0.9 httpx-0.28.1 idna-3.10 jsonpatch-1.33 jsonpointer-3.0.0 langchain-0.3.27 langchain-core-0.3.75 langchain-text-splitters-0.3.11 langsmith-0.4.25 orjson-3.11.3 pydantic-2.11.7 pydantic-core-2.33.2 requests-2.32.5 requests-toolbelt-1.0.0 sniffio-1.3.1 tenacity-9.1.2 typing-extensions-4.15.0 typing-inspection-0.4.1 urllib3-2.5.0 zstandard-0.24.0\n",
+      "Collecting tiktoken\n",
+      "  Downloading tiktoken-0.11.0-cp313-cp313-macosx_11_0_arm64.whl.metadata (6.7 kB)\n",
+      "Collecting regex>=2022.1.18 (from tiktoken)\n",
+      "  Downloading regex-2025.9.1-cp313-cp313-macosx_11_0_arm64.whl.metadata (40 kB)\n",
+      "Requirement already satisfied: requests>=2.26.0 in ./.venv/lib/python3.13/site-packages (from tiktoken) (2.32.5)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in ./.venv/lib/python3.13/site-packages (from requests>=2.26.0->tiktoken) (3.4.3)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in ./.venv/lib/python3.13/site-packages (from requests>=2.26.0->tiktoken) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./.venv/lib/python3.13/site-packages (from requests>=2.26.0->tiktoken) (2.5.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in ./.venv/lib/python3.13/site-packages (from requests>=2.26.0->tiktoken) (2025.8.3)\n",
+      "Downloading tiktoken-0.11.0-cp313-cp313-macosx_11_0_arm64.whl (997 kB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m997.1/997.1 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m2.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading regex-2025.9.1-cp313-cp313-macosx_11_0_arm64.whl (286 kB)\n",
+      "Installing collected packages: regex, tiktoken\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [tiktoken]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed regex-2025.9.1 tiktoken-0.11.0\n",
+      "Collecting wikipedia\n",
+      "  Downloading wikipedia-1.4.0.tar.gz (27 kB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting beautifulsoup4 (from wikipedia)\n",
+      "  Downloading beautifulsoup4-4.13.5-py3-none-any.whl.metadata (3.8 kB)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.0.0 in ./.venv/lib/python3.13/site-packages (from wikipedia) (2.32.5)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in ./.venv/lib/python3.13/site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.4.3)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in ./.venv/lib/python3.13/site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./.venv/lib/python3.13/site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2.5.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in ./.venv/lib/python3.13/site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2025.8.3)\n",
+      "Collecting soupsieve>1.2 (from beautifulsoup4->wikipedia)\n",
+      "  Downloading soupsieve-2.8-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.0 in ./.venv/lib/python3.13/site-packages (from beautifulsoup4->wikipedia) (4.15.0)\n",
+      "Downloading beautifulsoup4-4.13.5-py3-none-any.whl (105 kB)\n",
+      "Downloading soupsieve-2.8-py3-none-any.whl (36 kB)\n",
+      "Building wheels for collected packages: wikipedia\n",
+      "  Building wheel for wikipedia (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for wikipedia: filename=wikipedia-1.4.0-py3-none-any.whl size=11757 sha256=5eb34122fbe67dd1113e3fe6f458b3d1663e4acc868d9a42d85c8cf6f500fb8e\n",
+      "  Stored in directory: /Users/giossaurus/Library/Caches/pip/wheels/79/1d/c8/b64e19423cc5a2a339450ea5d145e7c8eb3d4aa2b150cde33b\n",
+      "Successfully built wikipedia\n",
+      "Installing collected packages: soupsieve, beautifulsoup4, wikipedia\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3/3\u001b[0m [wikipedia]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed beautifulsoup4-4.13.5 soupsieve-2.8 wikipedia-1.4.0\n",
+      "Collecting pypdf\n",
+      "  Downloading pypdf-6.0.0-py3-none-any.whl.metadata (7.1 kB)\n",
+      "Downloading pypdf-6.0.0-py3-none-any.whl (310 kB)\n",
+      "Installing collected packages: pypdf\n",
+      "Successfully installed pypdf-6.0.0\n",
+      "Collecting faiss-cpu\n",
+      "  Downloading faiss_cpu-1.12.0-cp313-cp313-macosx_14_0_arm64.whl.metadata (5.1 kB)\n",
+      "Collecting numpy<3.0,>=1.25.0 (from faiss-cpu)\n",
+      "  Downloading numpy-2.3.2-cp313-cp313-macosx_14_0_arm64.whl.metadata (62 kB)\n",
+      "Requirement already satisfied: packaging in ./.venv/lib/python3.13/site-packages (from faiss-cpu) (25.0)\n",
+      "Downloading faiss_cpu-1.12.0-cp313-cp313-macosx_14_0_arm64.whl (3.4 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.4/3.4 MB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m4.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m:01\u001b[0m\n",
+      "\u001b[?25hDownloading numpy-2.3.2-cp313-cp313-macosx_14_0_arm64.whl (5.1 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m10.4 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: numpy, faiss-cpu\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [faiss-cpu]━\u001b[0m \u001b[32m1/2\u001b[0m [faiss-cpu]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed faiss-cpu-1.12.0 numpy-2.3.2\n",
+      "Collecting pinecone-client\n",
+      "  Downloading pinecone_client-6.0.0-py3-none-any.whl.metadata (3.4 kB)\n",
+      "Requirement already satisfied: certifi>=2019.11.17 in ./.venv/lib/python3.13/site-packages (from pinecone-client) (2025.8.3)\n",
+      "Collecting pinecone-plugin-interface<0.0.8,>=0.0.7 (from pinecone-client)\n",
+      "  Downloading pinecone_plugin_interface-0.0.7-py3-none-any.whl.metadata (1.2 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.5.3 in ./.venv/lib/python3.13/site-packages (from pinecone-client) (2.9.0.post0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4 in ./.venv/lib/python3.13/site-packages (from pinecone-client) (4.15.0)\n",
+      "Requirement already satisfied: urllib3>=1.26.5 in ./.venv/lib/python3.13/site-packages (from pinecone-client) (2.5.0)\n",
+      "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.13/site-packages (from python-dateutil>=2.5.3->pinecone-client) (1.17.0)\n",
+      "Downloading pinecone_client-6.0.0-py3-none-any.whl (6.7 kB)\n",
+      "Downloading pinecone_plugin_interface-0.0.7-py3-none-any.whl (6.2 kB)\n",
+      "Installing collected packages: pinecone-plugin-interface, pinecone-client\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [pinecone-client]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed pinecone-client-6.0.0 pinecone-plugin-interface-0.0.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dependencias do projeto\n",
+    "!pip install langchain\n",
+    "!pip install tiktoken\n",
+    "!pip install wikipedia\n",
+    "!pip install pypdf\n",
+    "!pip install faiss-cpu\n",
+    "!pip install pinecone-client"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8c299a8",
+   "metadata": {},
+   "source": [
+    "Necessario ter APi key do OpenAI e Pinecone (API key e enviroment)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
