--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -263,6 +263,19 @@
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "from langchain.vectorstores import FAISS, Pinecone"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e1f83913",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Definindo variaveis de ambiente\n",
+    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "pinecone_api_key = os.getenv(\"PINECONE_API_KEY\")\n",
+    "pinecone_env = os.getenv(\"PINECONE_ENV\")\n"
+   ]
   }
  ],
  "metadata": {
