--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e1f83913",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
     "#Definindo variaveis de ambiente\n",
     "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "pinecone_api_key = os.getenv(\"PINECONE_API_KEY\")\n",
-    "pinecone_env = os.getenv(\"PINECONE_ENV\")\n"
+    "pinecone_env = os.getenv(\"PINECONE_ENV\")"
    ]
   }
  ],
